since that worked, give all permissions immediately after cloning, for all Linux workflows

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -40,6 +40,13 @@ jobs:
     - name: Checkout branch
       uses: actions/checkout@v4
 
+### fix folder permissions! not sure why this fails
+    # nested subdirs "build/linux/release" cause permission problems
+    - name: Give all permissions for repo folder
+      shell: bash
+      working-directory: ${{ github.workspace }}
+      run:  sudo chmod -R 777 "${{ github.workspace }}"
+
     - name: Lookup cache for deps
       id: emu-deps-cache-step
       uses: actions/cache@v3
@@ -75,6 +82,13 @@ jobs:
     steps:
     - name: Checkout branch
       uses: actions/checkout@v4
+
+### fix folder permissions! not sure why this fails
+    # nested subdirs "build/linux/release" cause permission problems
+    - name: Give all permissions for repo folder
+      shell: bash
+      working-directory: ${{ github.workspace }}
+      run:  sudo chmod -R 777 "${{ github.workspace }}"
 
 ### deps
     - name: Lookup cache for deps
@@ -120,12 +134,6 @@ jobs:
       with:
         ref: 'third-party/build/linux'
         path: "${{env.THIRD_PARTY_BASE_DIR}}/build/linux"
-
-### fix folder permissions! not sure why this fails
-    - name: Give all permissions for repo folder
-      shell: bash
-      working-directory: ${{ github.workspace }}
-      run:  sudo chmod -R 777 "${{ github.workspace }}"
 
 ### build (release mode)
     - name: Build release mode
