--- a/.github/workflows/build-gen_emu_config-linux.yml
+++ b/.github/workflows/build-gen_emu_config-linux.yml
@@ -29,6 +29,13 @@ jobs:
     - name: Checkout branch
       uses: actions/checkout@v4
     
+### fix folder permissions! not sure why this fails
+    # nested subdirs "build/linux/release" cause permission problems
+    - name: Give all permissions for repo folder
+      shell: bash
+      working-directory: ${{ github.workspace }}
+      run:  sudo chmod -R 777 "${{ github.workspace }}"
+
     - name: Install dependencies
       shell: bash
       working-directory: "${{ env.SCRIPT_BASE_DIR }}"
