change deps build dir to: build/deps/linux (example) to make them independant from emu build folder, which is for example build/linux/...

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -19,7 +19,7 @@ permissions:
 env:
 
   DEPS_CACHE_KEY: emu-deps-linux
-  DEPS_CACHE_DIR: build/linux/deps
+  DEPS_CACHE_DIR: build/deps/linux
 
   PACKAGE_BASE_DIR: "build/linux/package"
   THIRD_PARTY_BASE_DIR: 'third-party'
