--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -18,7 +18,7 @@ permissions:
 
 env:
   DEPS_CACHE_KEY: emu-deps-win
-  DEPS_CACHE_DIR: build/win/deps
+  DEPS_CACHE_DIR: build/deps/win
   
   PACKAGE_BASE_DIR: "build/win/package"
   THIRD_PARTY_BASE_DIR: 'third-party'
