--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -21,7 +21,7 @@ env:
   DEPS_CACHE_KEY: emu-deps-linux
   DEPS_CACHE_DIR: build/deps/linux
 
-  PACKAGE_BASE_DIR: "build/linux/package"
+  PACKAGE_BASE_DIR: "build/package/linux"
   THIRD_PARTY_BASE_DIR: 'third-party'
   
 jobs:
