--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -78,6 +78,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     needs: [ dependencies ]
+    if: always()
 
     steps:
     - name: Checkout branch
