use it for Windows workflow too since that worked!

--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -78,6 +78,7 @@ jobs:
   build:
     runs-on: windows-2022
     needs: [ dependencies ]
+    if: always()
 
     steps:
     - name: Checkout branch
