use that instead to allow cancelling workflows

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -78,7 +78,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     needs: [ dependencies ]
-    if: always()
+    if: ${{ !cancelled() }}
 
     steps:
     - name: Checkout branch
