--- a/.github/workflows/build-gen_emu_config-linux.yml
+++ b/.github/workflows/build-gen_emu_config-linux.yml
@@ -18,8 +18,8 @@ permissions:
 
 env:
   ARTIFACT_NAME: "generate_emu_config-linux-${{ github.sha }}"
-  SCRIPT_BASE_DIR: "${{ github.workspace }}/tools/generate_emu_config"
-  PACKAGE_BASE_DIR: "${{ github.workspace }}/tools/generate_emu_config/bin/package"
+  SCRIPT_BASE_DIR: "tools/generate_emu_config"
+  PACKAGE_BASE_DIR: "tools/generate_emu_config/bin/package/linux"
 
 jobs:
   build:
@@ -55,7 +55,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: "${{ env.ARTIFACT_NAME }}"
-        path: "${{ env.PACKAGE_BASE_DIR }}/linux/"
+        path: "${{ env.PACKAGE_BASE_DIR }}/"
         if-no-files-found: 'error'
         compression-level: 9
         retention-days: 1
