ignore gen emu script output folder

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ tools/generate_emu_config/backup/
 tools/generate_emu_config/bin/
 tools/generate_emu_config/build/
 tools/generate_emu_config/login_temp/
+tools/generate_emu_config/output/
 tools/generate_emu_config/**/__pycache__/
 tools/generate_emu_config/generate_emu_config*.spec
 tools/generate_emu_config/**/my_login.txt
