--- a/.github/workflows/build-gen_emu_config-linux.yml
+++ b/.github/workflows/build-gen_emu_config-linux.yml
@@ -36,21 +36,25 @@ jobs:
       working-directory: ${{ github.workspace }}
       run:  sudo chmod -R 777 "${{ github.workspace }}"
 
+# deps
     - name: Install dependencies
       shell: bash
       working-directory: "${{ env.SCRIPT_BASE_DIR }}"
       run: sudo chmod 77 recreate_venv_linux.sh && sudo ./recreate_venv_linux.sh
 
+# build
     - name: Rebuild
       shell: bash
       working-directory: "${{ env.SCRIPT_BASE_DIR }}"
       run: sudo chmod 77 rebuild_linux.sh && sudo ./rebuild_linux.sh
 
+# package
     - name: Package build
       shell: bash
       working-directory: "${{ env.SCRIPT_BASE_DIR }}"
       run: sudo chmod 77 package_linux.sh && sudo ./package_linux.sh
 
+# upload artifact
     - name: Upload build package
       uses: actions/upload-artifact@v4
       with:
@@ -60,6 +64,7 @@ jobs:
         compression-level: 9
         retention-days: 1
 
+# release tag
     - name: Release
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
