added dep for signer in workflow, here we go again! hope this works

--- a/.github/workflows/build-gen_emu_config-win.yml
+++ b/.github/workflows/build-gen_emu_config-win.yml
@@ -44,6 +44,12 @@ jobs:
         ref: 'third-party/deps/win'
         path: "${{env.THIRD_PARTY_BASE_DIR}}/deps/win"
 
+    - name: Clone third-party deps (build/win)
+      uses: actions/checkout@v4
+      with:
+        ref: 'third-party/build/win'
+        path: "${{env.THIRD_PARTY_BASE_DIR}}/build/win"
+
 # deps
     - name: Install dependencies
       shell: cmd
