--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -138,6 +138,12 @@ jobs:
         ref: 'third-party/deps/win'
         path: "${{env.THIRD_PARTY_BASE_DIR}}/deps/win"
 
+    - name: Clone third-party deps (build/win)
+      uses: actions/checkout@v4
+      with:
+        ref: 'third-party/build/win'
+        path: "${{env.THIRD_PARTY_BASE_DIR}}/build/win"
+
 ### build (release mode)
     - name: Build release mode
       shell: cmd
