--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,24 @@
 [submodule "third-party/build/linux"]
-	path = third-party/build/linux
-url=git@github.com:otavepto/gbe_fork.git
-	branch = third-party/build/linux
+  path = third-party/build/linux
+  url = https://github.com/otavepto/gbe_fork.git
+  branch = third-party/build/linux
 [submodule "third-party/common/win"]
-	path = third-party/common/win
-url=git@github.com:otavepto/gbe_fork.git
-	branch = third-party/common/win
+  path = third-party/common/win
+  url = https://github.com/otavepto/gbe_fork.git
+  branch = third-party/common/win
 [submodule "third-party/deps/common"]
-	path = third-party/deps/common
-url=git@github.com:otavepto/gbe_fork.git
-	branch = third-party/deps/common
+  path = third-party/deps/common
+  url = https://github.com/otavepto/gbe_fork.git
+  branch = third-party/deps/common
 [submodule "third-party/deps/linux"]
-	path = third-party/deps/linux
-url=git@github.com:otavepto/gbe_fork.git
-	branch = third-party/deps/linux
+  path = third-party/deps/linux
+  url = https://github.com/otavepto/gbe_fork.git
+  branch = third-party/deps/linux
 [submodule "third-party/deps/win"]
-	path = third-party/deps/win
-url=git@github.com:otavepto/gbe_fork.git
-	branch = third-party/deps/win
+  path = third-party/deps/win
+  url = https://github.com/otavepto/gbe_fork.git
+  branch = third-party/deps/win
 [submodule "third-party/build/win"]
-	path = third-party/build/win
-	url = git@github.com:otavepto/gbe_fork.git
-	branch = third-party/build/win
+  path = third-party/build/win
+  url = https://github.com/otavepto/gbe_fork.git
+  branch = third-party/build/win
