--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ build/
 dll/proto_gen/
 
 crash_printer/tests/crash_test/
+resources/win/file_dos_stub/build/
 
 tools/generate_emu_config/.py*/
 tools/generate_emu_config/.venv*/
