--- a/tools/steamclient_loader/win/ColdClientLoader.ini
+++ b/tools/steamclient_loader/win/ColdClientLoader.ini
@@ -1,7 +1,7 @@
-#My own modified version of ColdClientLoader originally by Rat431
+# modified version of ColdClientLoader originally by Rat431
 [SteamClient]
 Exe=game.exe
-ExeRunDir=.
+ExeRunDir=
 ExeCommandLine=
 #IMPORTANT:
 AppId=
@@ -9,8 +9,16 @@ AppId=
 SteamClientDll=steamclient.dll
 SteamClient64Dll=steamclient64.dll
 
+# inject `steamclient(64).dll`
+ForceInjectSteamClient=0
+
 [Debug]
+# don't call `ResumeThread()` on the main thread after spawning the .exe
 ResumeByDebugger=0
 
 [Extra]
-InjectDll=
+; path to a folder containing dlls to force inject into the app upon start
+; extra_dlls
+DllsToInjectFolder=
+; don't display an error message when a dll injection fails
+IgnoreInjectionError=1
