allow specifying a load order via a file called load_order.txt inside the root of the dlls to inject folder + updated readmes

--- a/post_build/win/ColdClientLoader.EXAMPLE/ColdClientLoader.EXAMPLE.ini
+++ b/post_build/win/ColdClientLoader.EXAMPLE/ColdClientLoader.EXAMPLE.ini
@@ -1,13 +1,13 @@
 # modified version of ColdClientLoader originally by Rat431
 [SteamClient]
 # path to game exe, absolute or relative to the loader
-Exe=game.exe
+Exe=my_app.exe
 # empty means the folder of the exe
 ExeRunDir=
 # any additional args to pass, ex: -dx11, also any args passed to the loader will be passed to the app
 ExeCommandLine=
 # IMPORTANT
-AppId=
+AppId=123
 
 # path to the steamclient dlls, both must be set,
 # absolute paths or relative to the loader
@@ -27,11 +27,9 @@ ResumeByDebugger=0
 # additionally, inside this folder you can create a file called `load_order.txt` and
 # inside it, specify line by line the order of the dlls that have to be injected
 # each line should be a relative path of the dll, relative to the injection folder
-# example:
-#DllsToInjectFolder=extra_dlls
-DllsToInjectFolder=
+DllsToInjectFolder=extra_dlls.EXAMPLE
 # don't display an error message when a dll injection fails
-IgnoreInjectionError=1
+IgnoreInjectionError=0
 # don't display an error message if the architecture of the loader is different from the app
 # this will result in a silent failure if a dll injection didn't succeed
 # both the loader and the app must have the same arch for the injection to work
