--- a/tools/steamclient_loader/win/ColdClientLoader.ini
+++ b/tools/steamclient_loader/win/ColdClientLoader.ini
@@ -6,7 +6,7 @@ Exe=game.exe
 ExeRunDir=
 # any additional args to pass, ex: -dx11, also any args passed to the loader will be passed to the app
 ExeCommandLine=
-# IMPORTANT
+# IMPORTANT, unless [Persistence] Mode=2
 AppId=
 
 # path to the steamclient dlls, both must be set,
@@ -14,14 +14,10 @@ AppId=
 SteamClientDll=steamclient.dll
 SteamClient64Dll=steamclient64.dll
 
+[Injection]
 # force inject steamclient dll instead of waiting for the app to load it
 ForceInjectSteamClient=0
 
-[Debug]
-# don't call `ResumeThread()` on the main thread after spawning the .exe
-ResumeByDebugger=0
-
-[Extra]
 # path to a folder containing some dlls to inject into the app upon start
 # this folder will be traversed recursively
 # additionally, inside this folder you can create a file called `load_order.txt` and
@@ -30,9 +26,22 @@ ResumeByDebugger=0
 # example:
 #DllsToInjectFolder=extra_dlls
 DllsToInjectFolder=
+
 # don't display an error message when a dll injection fails
 IgnoreInjectionError=1
 # don't display an error message if the architecture of the loader is different from the app
 # this will result in a silent failure if a dll injection didn't succeed
 # both the loader and the app must have the same arch for the injection to work
 IgnoreLoaderArchDifference=0
+
+[Persistence]
+# 0 = turned off
+# 1 = loader will spawn the exe and keep hanging in the background until you press "OK"
+# 2 = loader will NOT spawn exe, it will just setup the required environemnt and keep hanging in the background
+#     you have to run the Exe manually, and finally press "OK" when you've finished playing
+#     it is advised to run the loader as admin in this mode
+Mode=0
+
+[Debug]
+# don't call `ResumeThread()` on the main thread after spawning the .exe
+ResumeByDebugger=0
