--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -156,7 +156,7 @@ jobs:
       run: sudo chmod 77 package_linux.sh && sudo ./package_linux.sh release
 
 ### upload artifact/package to github Actions (release mode)
-    - name: Upload build pacakge (release)
+    - name: Upload build package (release)
       uses: actions/upload-artifact@v4
       with:
         name: "build-linux-release-${{ github.sha }}"
@@ -178,7 +178,7 @@ jobs:
       run: sudo chmod 77 package_linux.sh && sudo ./package_linux.sh debug
 
 ### upload artifact/package to github Actions (debug mode)
-    - name: Upload build pacakge (debug)
+    - name: Upload build package (debug)
       uses: actions/upload-artifact@v4
       with:
         name: "build-linux-debug-${{ github.sha }}"
