--- a/tools/steamclient_loader/win/ColdClientLoader.ini
+++ b/tools/steamclient_loader/win/ColdClientLoader.ini
@@ -39,6 +39,7 @@ IgnoreLoaderArchDifference=0
 # 1 = loader will spawn the exe and keep hanging in the background until you press "OK"
 # 2 = loader will NOT spawn exe, it will just setup the required environemnt and keep hanging in the background
 #     you have to run the Exe manually, and finally press "OK" when you've finished playing
+#     you have to rename the loader to "steam.exe"
 #     it is advised to run the loader as admin in this mode
 Mode=0
 
