--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ tools/generate_emu_config/bin/
 tools/generate_emu_config/login_temp/
 tools/generate_emu_config/output/
 tools/generate_emu_config/**/__pycache__/
-tools/generate_emu_config/generate_emu_config*.spec
+tools/generate_emu_config/**/*.spec
 tools/generate_emu_config/**/my_login.txt
 tools/generate_emu_config/top_owners_ids.txt
 
